fixin svg icon for histories on mobile

--- a/wp-content/themes/giger-kms/src/sass/_cards.scss
+++ b/wp-content/themes/giger-kms/src/sass/_cards.scss
@@ -390,6 +390,9 @@
         .story-author-ava {
             display:block;
 			@include transition(all 0.35s);
+			svg {
+				width: 100%;
+			}
         }
 
         .story-author-name {
